--- a/.github/workflows/workflow_ECDC_update_PR_fork.yml
+++ b/.github/workflows/workflow_ECDC_update_PR_fork.yml
@@ -35,7 +35,7 @@ jobs:
       - name: checkout forked repository
         uses: actions/checkout@v3
         with:
-	  ref: main
+	  ref: "main"
           token: ${{ secrets.Secret_PUSH_ACCESS_RespiCast}} #this might raise a problem 
 	  repository: 'ECDC-modelling-team/RespiCast-SyndromicIndicators'
 
